@@ -1,8 +1,6 @@
 package no.nav.foreldrepenger.fordel.web.app.konfig;
 
 import java.util.Collection;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.Set;
 
 import no.nav.foreldrepenger.fordel.web.app.exceptions.GeneralRestExceptionMapper;
@@ -10,18 +8,7 @@ import no.nav.foreldrepenger.fordel.web.app.jackson.JacksonJsonConfig;
 
 public class FellesKlasserForRest {
 
-    private static final Set<Class<?>> CLASSES;
-
-    static {
-        Set<Class<?>> klasser = new HashSet<>();
-        klasser.add(JacksonJsonConfig.class);
-        klasser.add(GeneralRestExceptionMapper.class);
-        CLASSES = Collections.unmodifiableSet(klasser);
-    }
-
-    private FellesKlasserForRest() {
-
-    }
+    private static final Set<Class<?>> CLASSES = Set.of(JacksonJsonConfig.class, GeneralRestExceptionMapper.class);;
 
     public static Collection<Class<?>> getClasses() {
         return CLASSES;
